--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,3 +1,6 @@
-arb-dir: Lib/l10n
+# arb-dir: Lib/l10n
+# template-arb-file: app_en.arb
+# output-localization-file: app_localization.dart
+arb-dir: lib/l10n
 template-arb-file: app_en.arb
-output-localization-file: app_localization.dart
+output-localization-file: app_localizations.dart
