--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,19 +5,6 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-# for android
 version: 1.0.1+2
 # for ios
 # version: 1.0.0+1
@@ -25,18 +12,12 @@ version: 1.0.1+2
 environment:
   sdk: ">=2.18.2 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   animated_bottom_navigation_bar: ^1.1.0
   auto_size_text: ^3.0.0
   awesome_dialog: ^3.0.2
   bot_toast: ^4.0.3
-  cached_network_image: ^3.2.2
+  cached_network_image: ^3.3.1
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
@@ -44,6 +25,7 @@ dependencies:
   floading: ^2.0.0
   flutter:
     sdk: flutter
+  # flutter_gen: ^5.5.0+1
   flutter_lints: ^2.0.0
   flutter_localizations:
     sdk: flutter
@@ -51,20 +33,17 @@ dependencies:
   flutter_rating_stars: ^1.0.3+4
   flutter_test:
     sdk: flutter
-  flutter_translate: ^4.0.3
   font_awesome_flutter: ^10.2.1
-  fullscreen: ^1.0.3
   http: ^0.13.5
   http_parser: ^4.0.2
   image_picker: ^0.8.6
-  intl: ^0.17.0
+  intl: ^0.19.0
   lecle_flutter_absolute_path: ^0.0.2+1
-  multi_image_picker_view: ^0.0.6
-  multiple_images_picker: ^1.0.1
+  multi_image_picker_view: ^1.0.2
+  # multiple_images_picker: ^1.0.1
   page_transition: ^2.0.9
-
   photo_view: ^0.14.0
-  pin_code_fields: ^7.4.0
+  pin_code_fields: ^8.0.1
   provider: ^6.0.4
   rxdart: ^0.27.5
   shared_preferences: ^2.0.15
@@ -75,6 +54,8 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
+  build_runner:
+  flutter_gen_runner:
 
 flutter_icons:
   android: "ic_launcher"
@@ -96,16 +77,6 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/
-  #   - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: RocknRollOne
       fonts:
@@ -122,5 +93,3 @@ flutter:
         - asset: assets/fonts/PTSans-Bold.ttf
         - asset: assets/fonts/PTSans-Italic.ttf
         - asset: assets/fonts/PTSans-Regular.ttf
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
