--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,20 @@ dependencies:
   awesome_dialog: ^3.0.2
   bot_toast: ^4.0.3
   cached_network_image: ^3.3.1
-  carousel_slider: ^4.1.1
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   eva_icons_flutter: ^3.1.0
   floading: ^2.0.0
   flutter:
     sdk: flutter
-  # flutter_gen: ^5.5.0+1
   flutter_lints: ^2.0.0
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.2.11
   flutter_rating_stars: ^1.0.3+4
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_svg: ^1.1.6
   flutter_test:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
@@ -40,7 +41,6 @@ dependencies:
   intl: ^0.19.0
   lecle_flutter_absolute_path: ^0.0.2+1
   multi_image_picker_view: ^1.0.2
-  # multiple_images_picker: ^1.0.1
   page_transition: ^2.0.9
   photo_view: ^0.14.0
   pin_code_fields: ^8.0.1
@@ -53,9 +53,9 @@ dependencies:
   video_player: ^2.4.7
 
 dev_dependencies:
+  build_runner: null
+  flutter_gen_runner: null
   flutter_launcher_icons: ^0.11.0
-  build_runner:
-  flutter_gen_runner:
 
 flutter_icons:
   android: "ic_launcher"
