--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.1.6
   video_player: ^2.4.7
 
+  # flutter_gen: any
 dev_dependencies:
   build_runner: null
   flutter_gen_runner: null
