--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   bot_toast: ^4.0.3
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   dotted_border: ^2.1.0
