--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,12 @@ environment:
   sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
-  animated_bottom_navigation_bar: ^1.1.0
+  # animated_bottom_navigation_bar: ^1.1.0
   auto_size_text: ^3.0.0
   awesome_dialog: ^3.0.2
   bot_toast: ^4.0.3
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
-  flutter_rating_bar: ^4.0.1
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   dotted_border: ^2.1.0
@@ -31,6 +30,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.2.11
+  flutter_rating_bar: ^4.0.1
   flutter_rating_stars: ^1.0.3+4
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^1.1.6
@@ -51,10 +51,9 @@ dependencies:
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   sizer: ^2.0.15
+  ultimate_bottom_navbar: ^0.0.7
   url_launcher: ^6.1.6
   video_player: ^2.4.7
-
-  # flutter_gen: any
 dev_dependencies:
   build_runner: null
   flutter_gen_runner: null
