--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ environment:
   sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
-  # animated_bottom_navigation_bar: ^1.1.0
   auto_size_text: ^3.0.0
   awesome_dialog: ^3.0.2
   bot_toast: ^4.0.3
@@ -26,6 +25,7 @@ dependencies:
   floading: ^2.0.0
   flutter:
     sdk: flutter
+  # flutter_gen: ^5.5.0+1
   flutter_lints: ^2.0.0
   flutter_localizations:
     sdk: flutter
@@ -54,6 +54,7 @@ dependencies:
   ultimate_bottom_navbar: ^0.0.7
   url_launcher: ^6.1.6
   video_player: ^2.4.7
+  # flutter_gen: any
 dev_dependencies:
   build_runner: null
   flutter_gen_runner: null
