--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,10 +6,12 @@ buildscript {
     }
 
     dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
 allprojects {
     repositories {
         google()
@@ -20,9 +22,6 @@ allprojects {
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(':app')
 }
 
 tasks.register("clean", Delete) {
