--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,7 +72,7 @@ android {
 
     buildTypes {
         release {
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
     }
 }
