--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   bot_toast: ^4.0.3
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
+  country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   dotted_border: ^2.1.0
@@ -27,7 +28,6 @@ dependencies:
   floading: ^2.0.0
   flutter:
     sdk: flutter
-  # flutter_gen: ^5.5.0+1
   flutter_lints: ^2.0.0
   flutter_localizations:
     sdk: flutter
@@ -56,7 +56,6 @@ dependencies:
   ultimate_bottom_navbar: ^0.0.7
   url_launcher: ^6.1.6
   video_player: ^2.4.7
-  # flutter_gen: any
 dev_dependencies:
   build_runner: null
   flutter_gen_runner: null
