--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
+    id "org.jetbrains.kotlin.android"
+    // id 'kotlin-android'
+    id "com.google.gms.google-services"
     id 'dev.flutter.flutter-gradle-plugin'
 }
 
@@ -38,7 +40,7 @@ if (keystorePropertiesFile.exists()) {
 android {
     compileSdkVersion 34
     ndkVersion "25.1.8937393"
-
+    namespace  "com.lunaenterprises"
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -82,8 +84,8 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.multidex:multidex:2.0.1'
 }
 
-apply plugin: 'com.google.gms.google-services'
+// apply plugin: 'com.google.gms.google-services'
