--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,6 +38,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
+    namespace "com.lunaenterprises"
     compileSdkVersion 34
     ndkVersion "25.1.8937393"
     namespace  "com.lunaenterprises"
