--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   carousel_slider: ^5.0.0
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
-  dio: ^4.0.6
+  dio: ^4.0.6    
   dotted_border: ^2.1.0
   eva_icons_flutter: ^3.1.0
   firebase_auth: ^5.1.0
@@ -44,12 +44,16 @@ dependencies:
   intl: ^0.19.0
   multi_image_picker_view: ^1.0.2
   page_transition: ^2.0.9
+  path_provider: ^2.1.4
+  pdf: ^3.8.4
+  permission_handler: ^11.3.1
   photo_view: ^0.14.0
-  pin_code_fields: ^8.0.1
+  pin_code_fields: ^8.0.1    
   provider: ^6.0.4
   rxdart: ^0.27.5
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
+  signature: ^5.3.0
   sizer: ^2.0.15
   ultimate_bottom_navbar: ^0.0.7
   url_launcher: ^6.3.0
