--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,16 +1,15 @@
-// buildscript {
-//     ext.kotlin_version = '2.0.20'
-//     repositories {
-//         google()
-//         mavenCentral()
-//     }
+buildscript {
+    ext.kotlin_version = '1.7.10'
+    repositories {
+        google()
+        mavenCentral()
+    }
 
-//     dependencies {
-//         classpath 'com.google.gms:google-services:4.3.15'
-//         classpath 'com.android.tools.build:gradle:8.5.0'
-//         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-//     }
-// }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 
 allprojects {
     repositories {
@@ -22,6 +21,9 @@ allprojects {
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
+subprojects {
+    project.evaluationDependsOn(':app')
 }
 
 tasks.register("clean", Delete) {
