--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   carousel_slider: ^5.0.0
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
-  dio: ^4.0.6    
+  dio: ^5.7.0    
   dotted_border: ^2.1.0
   eva_icons_flutter: ^3.1.0
   firebase_auth: ^5.1.0
@@ -28,40 +28,42 @@ dependencies:
   floading: ^2.0.0
   flutter:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   flutter_localizations:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   flutter_rating_stars: ^1.0.3+4
   flutter_staggered_grid_view: ^0.7.0
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.10+1
   flutter_test:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
-  http: ^0.13.5
+  http: ^1.2.2
   http_parser: ^4.0.2
-  image_picker: ^0.8.6
+  image_picker: ^1.1.2
   intl: ^0.19.0
   multi_image_picker_view: ^1.0.2
   page_transition: ^2.0.9
   path_provider: ^2.1.4
   pdf: ^3.8.4
   permission_handler: ^11.3.1
-  photo_view: ^0.14.0
+  photo_view: ^0.15.0
   pin_code_fields: ^8.0.1    
+  printing: ^5.9.3
   provider: ^6.0.4
-  rxdart: ^0.27.5
+  rxdart: ^0.28.0
   shared_preferences: ^2.0.15
-  shimmer: ^2.0.0
+  shimmer: ^3.0.0
   signature: ^5.3.0
-  sizer: ^2.0.15
+  
+  sizer: ^3.0.3
   ultimate_bottom_navbar: ^0.0.7
   url_launcher: ^6.3.0
   video_player: ^2.9.1
 dev_dependencies:
   build_runner: null
   flutter_gen_runner: null
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   android: "ic_launcher"
