--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   carousel_slider: ^5.0.0
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
-  dio: ^5.7.0    
+  dio: ^5.7.0
   dotted_border: ^2.1.0
   eva_icons_flutter: ^3.1.0
   firebase_auth: ^5.1.0
@@ -48,14 +48,14 @@ dependencies:
   pdf: ^3.8.4
   permission_handler: ^11.3.1
   photo_view: ^0.15.0
-  pin_code_fields: ^8.0.1    
+  pin_code_fields: ^8.0.1
   printing: ^5.9.3
   provider: ^6.0.4
   rxdart: ^0.28.0
   shared_preferences: ^2.0.15
   shimmer: ^3.0.0
   signature: ^5.3.0
-  
+
   sizer: ^3.0.3
   ultimate_bottom_navbar: ^0.0.7
   url_launcher: ^6.3.0
@@ -84,6 +84,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/house_images/
     - assets/
   fonts:
     - family: RocknRollOne
