--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,3 +105,12 @@ flutter:
         - asset: assets/fonts/PTSans-Bold.ttf
         - asset: assets/fonts/PTSans-Italic.ttf
         - asset: assets/fonts/PTSans-Regular.ttf
+    - family: Outfit
+      fonts:
+        - asset: assets/fonts/Outfit-Black.ttf
+        - asset: assets/fonts/Outfit-Bold.ttf
+        - asset: assets/fonts/Outfit-ExtraBold.ttf
+        - asset: assets/fonts/Outfit-ExtraLight.ttf
+        - asset: assets/fonts/Outfit-Light.ttf 
+        - asset: assets/fonts/Outfit-Medium.ttf 
+        - asset: assets/fonts/Outfit-Regular.ttf      
