--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_test:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
+  geocoding: ^3.0.0
+  geolocator: ^13.0.4
   http: ^1.2.2
   http_parser: ^4.0.2
   image_picker: ^1.1.2
