--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,7 @@
 analyzer:
   errors:
     use_build_context_synchronously: ignore
+    deprecated_member_use: ignore
 inc ignore ignore ignore ignorelude: package:flutter_lints/flutter.yaml
 
 linter:
