--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   flutter_rating_stars: ^1.0.3+4
+  flutter_staggered_animations: ^1.1.1
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.10+1
   flutter_test:
