--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   ultimate_bottom_navbar: ^0.0.7
   url_launcher: ^6.3.0
   video_player: ^2.9.2
+  easy_pdf_viewer: ^1.0.8
 dev_dependencies:
   build_runner: null
   flutter_gen_runner: null
