--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,24 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>872097734544-mh7brcbuulb8d70tui67gsrb3c9i0ggq.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.872097734544-mh7brcbuulb8d70tui67gsrb3c9i0ggq</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>872097734544-6802r37micslnq6ac3khnml0jeo6i66q.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAGyp6yIdHsUTo8lAq3grv0J6rzVRZl-Qk</string>
+	<string>AIzaSyDoV2wZ9b-ZVLrJdkv1yz7u3hOf2YVQgfg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>872097734544</string>
+	<string>9195639332</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.lunaenterprises</string>
 	<key>PROJECT_ID</key>
-	<string>testotp-57a8a</string>
+	<string>lunaenterprises-bf474</string>
 	<key>STORAGE_BUCKET</key>
-	<string>testotp-57a8a.appspot.com</string>
+	<string>lunaenterprises-bf474.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:872097734544:ios:f76c772ce94f0455c55d15</string>
+	<string>1:9195639332:ios:f449dc76724d631fef7eb1</string>
 </dict>
 </plist>
