--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dotted_border: ^2.1.0
   eva_icons_flutter: ^3.1.0
   firebase_auth: ^5.1.0
+  onesignal_flutter: ^5.3.0
   firebase_core: ^3.1.0
   floading: ^2.0.0
   flutter:
