Google map screen added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lunaenterprises">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -20,9 +19,10 @@
    <application
         android:label="Luna E"
         android:enableOnBackInvokedCallback="true"
-        android:extractNativeLibs="true"
-        android:name="${applicationName}"
+       android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+         <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCqUd6HTIUNSS1kjbCeX6bvIg6VwBxEXKM"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
