--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ if (keystorePropertiesFile.exists()) {
 android {
     namespace "com.lunaenterprises"
     compileSdkVersion 35
-    ndkVersion "26.1.10909125"
+    ndkVersion "27.0.12077973"
     namespace  "com.lunaenterprises"
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -71,6 +71,11 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.debug
+        }
+    }
+    packaging {
+        jniLibs {
+            useLegacyPackaging true
         }
     }
 }
