--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,31 +22,41 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.7.0
   dotted_border: ^2.1.0
+  easy_pdf_viewer: ^1.0.8
   eva_icons_flutter: ^3.1.0
   firebase_auth: ^5.1.0
-  onesignal_flutter: ^5.3.0
   firebase_core: ^3.1.0
+  rive_common: ^0.4.15
   floading: ^2.0.0
   flutter:
     sdk: flutter
+  # flutter_google_places: ^0.3.0
+  flutter_google_places_sdk: ^0.4.2+1
   flutter_lints: ^4.0.0
   flutter_localizations:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   flutter_rating_stars: ^1.0.3+4
   flutter_staggered_animations: ^1.1.1
+  google_api_headers: ^4.4.5
   flutter_staggered_grid_view: ^0.7.0
-  flutter_svg: ^2.0.10+1
+  # flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.5
   flutter_test:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
   geocoding: ^3.0.0
   geolocator: ^13.0.4
+  google_maps_flutter: ^2.12.1
+  # google_maps_webservice: ^0.0.19
+  flutter_google_maps_webservices: ^1.1.1
+  # http: ^0.13.1
   http: ^1.2.2
   http_parser: ^4.0.2
   image_picker: ^1.1.2
   intl: ^0.19.0
   multi_image_picker_view: ^1.0.2
+  onesignal_flutter: ^5.3.0
   page_transition: ^2.0.9
   path_provider: ^2.1.4
   pdf: ^3.8.4
@@ -55,16 +65,15 @@ dependencies:
   pin_code_fields: ^8.0.1
   printing: ^5.9.3
   provider: ^6.0.4
-  rxdart: ^0.28.0
+  rxdart: ^0.26.0
+  shaky_animated_listview: ^0.0.5
   shared_preferences: ^2.0.15
   shimmer: ^3.0.0
   signature: ^5.3.0
-  shaky_animated_listview: ^0.0.5
   sizer: ^3.0.3
   ultimate_bottom_navbar: ^0.0.7
   url_launcher: ^6.3.0
   video_player: ^2.9.2
-  easy_pdf_viewer: ^1.0.8
 dev_dependencies:
   build_runner: null
   flutter_gen_runner: null
@@ -116,6 +125,6 @@ flutter:
         - asset: assets/fonts/Outfit-Bold.ttf
         - asset: assets/fonts/Outfit-ExtraBold.ttf
         - asset: assets/fonts/Outfit-ExtraLight.ttf
-        - asset: assets/fonts/Outfit-Light.ttf 
-        - asset: assets/fonts/Outfit-Medium.ttf 
-        - asset: assets/fonts/Outfit-Regular.ttf      
+        - asset: assets/fonts/Outfit-Light.ttf
+        - asset: assets/fonts/Outfit-Medium.ttf
+        - asset: assets/fonts/Outfit-Regular.ttf
