--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,11 @@ dependencies:
   carousel_slider: ^5.0.0
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
+  pdfrx: ^1.1.29
   dio: ^5.7.0
   dotted_border: ^2.1.0
   google_places_autocomplete: ^0.0.4
-  easy_pdf_viewer: ^1.0.8
+  # easy_pdf_viewer: ^1.0.8
   eva_icons_flutter: ^3.1.0
   firebase_auth: ^5.1.0
   firebase_core: ^3.1.0
@@ -55,7 +56,7 @@ dependencies:
   http: ^1.2.2
   http_parser: ^4.0.2
   image_picker: ^1.1.2
-  intl: ^0.19.0
+  intl: ^0.20.2
   multi_image_picker_view: ^1.0.2
   onesignal_flutter: ^5.3.0
   page_transition: ^2.0.9
