--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,14 +63,14 @@ android {
         applicationId "com.lunaenterprises"
         multiDexEnabled true
         minSdkVersion 23
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 35
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
 
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
     packaging {
