--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -17,10 +17,10 @@ pluginManagement {
 }
 
 plugins {
-    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version '8.9.2' apply false
-    id "org.jetbrains.kotlin.android" version "2.0.10" apply false
-    id "com.google.gms.google-services" version "4.4.0" apply false
+//    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+//    id "com.android.application" version '8.9.2' apply false
+//    id "org.jetbrains.kotlin.android" version "2.0.10" apply false
+//    id "com.google.gms.google-services" version "4.4.0" apply false
 
 }
 
